--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -18,3 +18,6 @@ spec:
         name: guestbook-ui
         ports:
         - containerPort: 8080
+      securityContext:
+        runAsUser: 0
+        runAsGroup: 0
