--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -21,3 +21,5 @@ spec:
       securityContext:
         runAsUser: 0
         runAsGroup: 0
+      serviceAccount: test-sa
+      serviceAccountName: test-sa
