--- a/guestbook/guestbook-route.yaml
+++ b/guestbook/guestbook-route.yaml
@@ -14,6 +14,6 @@ spec:
     termination: edge
   to:
     kind: Service
-    name: commops-qa-etrm-deal-processor-unreg-service
+    name: guestbook-ui
     weight: 100
   wildcardPolicy: None
