--- a/guestbook/guestbook-route.yaml
+++ b/guestbook/guestbook-route.yaml
@@ -6,6 +6,7 @@ metadata:
   name: guestbook-route
   namespace: guestbook
 spec:
+  subdomain: guestbook
   host: guestbook.ocpcommops-np.cloud.aep.com
   port:
     targetPort: 8080
